<resources>
    <string name="app_name">Heroes</string>
    <string name="textView_heroName">Hero Name: </string>
    <string name="textView_heroDescription">Hero Description: </string>
    <string name="textView_heroSuperpower">Hero Superpower: </string>
    <string name="textView_heroRanking">Hero Ranking: </string>
    <string name="textView_theRowerNumber">10</string>
    <string name="textView_theRowerName">The Rower</string>
    <string name="textView_theRoverDesc">Takes up a single roll of a listView</string>
</resources>
