<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_theRower_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_theRowerNumber"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/textView_theRower_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_theRowerName"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_theRower_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <TextView
        android:id="@+id/textView_theRower_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_theRoverDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.451"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />
</androidx.constraintlayout.widget.ConstraintLayout>