<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HeroesListActivity">

    <TextView
        android:id="@+id/textView_heroes_heroName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_heroName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <ImageView
        android:id="@+id/imageView_heroes_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/catman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heroes_heroName"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/textView_heroes_heroDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_heroDescription"
        app:layout_constraintBottom_toTopOf="@+id/textView_heroes_heroSuperPower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_heroes_image" />

    <TextView
        android:id="@+id/textView_heroes_heroSuperPower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_heroSuperpower"
        app:layout_constraintBottom_toTopOf="@+id/textView_heroes_heroRanking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heroes_heroDescription" />

    <TextView
        android:id="@+id/textView_heroes_heroRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_heroRanking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heroes_heroSuperPower" />
</androidx.constraintlayout.widget.ConstraintLayout>